fix mistake not pulling in enough dates

--- a/pipeline/5-get-ridership.ipynb
+++ b/pipeline/5-get-ridership.ipynb
@@ -12,8 +12,7 @@
     "import pandas as pd\n",
     "from tqdm import tqdm\n",
     "\n",
-    "from data.constants import (DATA_FOLDER, DNC_START_ISO, DNC_END_ISO,\n",
-    "                            L_RIDERSHIP_TABLE, BUS_RIDERSHIP_TABLE)\n",
+    "from data.constants import (DATA_FOLDER, L_RIDERSHIP_TABLE, BUS_RIDERSHIP_TABLE)\n",
     "from data.cta import CTAClient\n",
     "from data.divvy import DivvyClient\n",
     "from data.uber import UberClient\n",
@@ -49,7 +48,7 @@
    "source": [
     "cta_client = CTAClient(60)\n",
     "divvy_client = DivvyClient()\n",
-    "uber_client = UberClient(600)"
+    "uber_client = UberClient(900)"
    ]
   },
   {
@@ -81,7 +80,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Looking ahead, we use models with -1 week, -1 month, and -1 YTD, at daily granularity."
+    "Looking ahead, we use models with -1 week, -1 month, and -1 YTD, at daily granularity.\n",
+    "\n",
+    "Therefore we will pull in data from JANUARY 1, 2024 through AUGUST 31, 2024.\n",
+    "\n",
+    "Note: we want to finish the whole month of August to ensure we have a FULL \n",
+    "week of data for the DNC. Otherwise we may mis-infer a weekly/monthly effect of DNC on ridership\n",
+    "when actually we just mechanically omitted some days!"
    ]
   },
   {
@@ -91,7 +96,7 @@
    "outputs": [],
    "source": [
     "data_start_iso = dt(2024, 1, 1).isoformat()\n",
-    "data_end_iso = DNC_END_ISO"
+    "data_end_iso = dt(2024, 8, 31, 23, 59, 59).isoformat()"
    ]
   },
   {
@@ -193,7 +198,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1it [00:28, 28.31s/it]"
+      "1it [00:26, 26.30s/it]"
      ]
     },
     {
@@ -207,7 +212,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2it [00:32, 14.05s/it]"
+      "2it [00:29, 12.46s/it]"
      ]
     },
     {
@@ -221,7 +226,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "3it [00:37, 10.12s/it]"
+      "3it [00:32,  8.54s/it]"
      ]
     },
     {
@@ -235,7 +240,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "4it [00:45,  9.23s/it]"
+      "4it [00:38,  7.34s/it]"
      ]
     },
     {
@@ -249,7 +254,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "5it [00:56,  9.92s/it]"
+      "5it [00:46,  7.58s/it]"
      ]
     },
     {
@@ -263,7 +268,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "6it [01:10, 11.07s/it]"
+      "6it [00:56,  8.31s/it]"
      ]
     },
     {
@@ -277,7 +282,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "7it [01:23, 11.88s/it]"
+      "7it [01:05,  8.72s/it]"
      ]
     },
     {
@@ -291,7 +296,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "8it [01:36, 12.16s/it]"
+      "8it [01:14,  8.86s/it]"
      ]
     },
     {
@@ -305,7 +310,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "9it [01:50, 12.31s/it]\n"
+      "9it [01:24,  9.42s/it]\n"
      ]
     }
    ],
@@ -376,23 +381,23 @@
    "outputs": [],
    "source": [
     "uber_pickups = uber_client.soda_get_uber(select=\"\"\"\n",
-    "                                         date_trunc_ymd(trip_start_timestamp) as start_date, \n",
-    "                                         pickup_census_tract,\n",
-    "                                         count(trip_id) as rides\n",
-    "                                         \"\"\",\n",
-    "                                         where_start=iso_to_ymd(data_start_iso), \n",
-    "                                         where_end=iso_to_ymd(data_end_iso), \n",
-    "                                         group=\"start_date, pickup_census_tract\",\n",
-    "                                         pickup=True)\n",
+    "                                    date_trunc_ymd(trip_start_timestamp) as start_date, \n",
+    "                                    pickup_census_tract,\n",
+    "                                    count(trip_id) as rides\n",
+    "                                    \"\"\",\n",
+    "                                    where_start=iso_to_ymd(data_start_iso), \n",
+    "                                    where_end=iso_to_ymd(data_end_iso), \n",
+    "                                    group=\"start_date, pickup_census_tract\",\n",
+    "                                    pickup=True)\n",
     "uber_dropoffs = uber_client.soda_get_uber(select=\"\"\"\n",
-    "                                         date_trunc_ymd(trip_end_timestamp) as end_date, \n",
-    "                                         dropoff_census_tract,\n",
-    "                                         count(trip_id) as rides\n",
-    "                                         \"\"\",\n",
-    "                                         where_start=iso_to_ymd(data_start_iso), \n",
-    "                                         where_end=iso_to_ymd(data_end_iso), \n",
-    "                                         group=\"end_date, dropoff_census_tract\",\n",
-    "                                         pickup=False)"
+    "                                    date_trunc_ymd(trip_end_timestamp) as end_date, \n",
+    "                                    dropoff_census_tract,\n",
+    "                                    count(trip_id) as rides\n",
+    "                                    \"\"\",\n",
+    "                                    where_start=iso_to_ymd(data_start_iso), \n",
+    "                                    where_end=iso_to_ymd(data_end_iso), \n",
+    "                                    group=\"end_date, dropoff_census_tract\",\n",
+    "                                    pickup=False)"
    ]
   },
   {
