--- a/pipeline/7-merge-panels.ipynb
+++ b/pipeline/7-merge-panels.ipynb
@@ -101,6 +101,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "TODO!\n",
+    "\n",
+    "I want to add train lines as a unit of observation: so aggregating station-level boardings\n",
+    "per line. If a station serves multiple lines we divide boardings by the number of lines.\n",
+    "I think this would give a good comparison to bus routes. Because we only measure\n",
+    "L boardings, if people take the L to the DNC and take Ubers home we will never observe it."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Bike Rides + Stations"
    ]
   },
@@ -161,7 +173,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No common points? False. 345959 / 1071861 points in common.\n"
+      "No common points? False. 359714 / 1086142 points in common.\n"
      ]
     }
    ],
