Implement ridership agg by train line

--- a/pipeline/6-code-features.ipynb
+++ b/pipeline/6-code-features.ipynb
@@ -14,9 +14,10 @@
     "\n",
     "from data.constants import (WORLD_CRS, LOCAL_CRS, DATA_FOLDER,\n",
     "                                OHARE_CENTROID, MIDWAY_CENTROID,\n",
-    "                                DNC_START, DNC_END)\n",
+    "                                DNC_START, DNC_END, L_STATIONS_TABLE)\n",
     "from data.geo import meter_to_foot, dms_to_decimal\n",
-    "from data.datemath import to_ymd"
+    "from data.datemath import to_ymd\n",
+    "from data.cta import CTAClient"
    ]
   },
   {
@@ -300,6 +301,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Station Lines"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:root:Requests made without an app_token will be subject to strict throttling limits.\n"
+     ]
+    }
+   ],
+   "source": [
+    "cta_client = CTAClient(60)\n",
+    "lines = ['red','blue','g','brn','p','pexp','y','pnk','o']\n",
+    "line_names = ['red','blue','green','brown','purple','purpleexp','yellow','pink','orange']\n",
+    "station_ids = ['station_name', 'map_id']\n",
+    "\n",
+    "l_lines = cta_client.soda_get_all(L_STATIONS_TABLE, select=f\"{','.join(station_ids)}, {','.join(lines)}\")\n",
+    "l_lines = l_lines.rename(columns=dict(zip(lines, line_names)))\n",
+    "l_lines['purple'] = l_lines['purple'] | l_lines['purpleexp']\n",
+    "l_lines = l_lines.drop(columns=['purpleexp'])\n",
+    "l_lines = l_lines.melt(id_vars=station_ids, var_name='line', value_name='is_line')\n",
+    "l_lines = l_lines.query('is_line').drop(columns='is_line')\n",
+    "l_lines = l_lines.groupby(station_ids, as_index=False)['line'].agg(lambda x: ','.join(set(x)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_stations = train_stations.merge(l_lines, how='left')\n",
+    "assert train_stations['line'].notna().all()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Station Tracts"
    ]
   },
@@ -312,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
