--- a/pipeline/7-merge-panels.ipynb
+++ b/pipeline/7-merge-panels.ipynb
@@ -34,6 +34,7 @@
     "uber_rides_in = os.path.join(DATA_FOLDER, \"interim\", \"uber_rides.parquet\")\n",
     "\n",
     "point_panel_out = os.path.join(DATA_FOLDER, \"final\", \"point_panel.parquet\")\n",
+    "line_panel_out = os.path.join(DATA_FOLDER, \"final\", \"line_panel.parquet\")\n",
     "tract_panel_out = os.path.join(DATA_FOLDER, \"final\", \"tract_panel.parquet\")"
    ]
   },
@@ -101,12 +102,55 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "TODO!\n",
-    "\n",
-    "I want to add train lines as a unit of observation: so aggregating station-level boardings\n",
-    "per line. If a station serves multiple lines we divide boardings by the number of lines.\n",
-    "I think this would give a good comparison to bus routes. Because we only measure\n",
-    "L boardings, if people take the L to the DNC and take Ubers home we will never observe it."
+    "## Aggregate to Line"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Recover statistic before exploding\n",
+    "lines_per_station = train_stations.set_index('map_id')['line'].str.count(',')+1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Explode multi-line stations to keep correct cardinality of lines\n",
+    "train_stations['line'] = train_stations['line'].str.split(',')\n",
+    "train_stations = train_stations.explode('line')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feature_cols = ['airport', 'uc_400', 'uc_800', 'uc_1600', 'mp_400', 'mp_800', 'mp_1600']\n",
+    "train_line_features = train_stations.groupby('line')[feature_cols].any().astype(float).reset_index()\n",
+    "train_centroids = train_stations.groupby('line')['geometry'].agg(lambda x: MultiPoint(list(x)).centroid)\n",
+    "train_line_features['centroid'] = gpd.GeoSeries(train_line_features['line'].map(train_centroids), crs=train_stations.crs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The ridership data isn't at directional granularity, even though some stations \n",
+    "# do have separate directional entrances. We will apportion ridership equally per\n",
+    "# line at multi-line stations.\n",
+    "# TODO: Improve this model of line popularity?\n",
+    "train_line_rides = train_rides.assign(rides = train_rides['rides'] / train_rides['map_id'].map(lines_per_station))\n",
+    "train_line_rides = train_line_rides.groupby(['line','date','daytype','DNC'],as_index=False).agg({'rides':'sum'})\n",
+    "train_line_rides = train_line_rides.merge(train_line_features)"
    ]
   },
   {
@@ -118,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +505,7 @@
        "max     0.038462  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -591,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,24 +663,30 @@
    "source": [
     "All things equal, we should take the bus and uber components with a grain of salt.\n",
     "The uber and bus components have systematically larger measurement error in lat/lon since they\n",
-    "are snapped to tract / route centroid. This breaks an OLS assumption. \n",
-    "\n",
-    "If we wanted\n",
-    "greater parity between bus and train panels, we could have a third representation that aggregate train to lines as well."
+    "are snapped to tract / route centroid. This breaks an OLS assumption. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "point_panel = combine_panels(bus=bus_rides.drop(columns=['geometry']) \\\n",
-    "                                 .rename(columns={'centroid':'geometry', 'route':'id'}),\n",
-    "                            train=train_rides.assign(id = train_rides['station_id'].astype(str)),\n",
+    "point_panel = combine_panels(train=train_rides.assign(id = train_rides['station_id'].astype(str)),\n",
     "                            bike=bike_rides.rename(columns={\"station_id\":\"id\"}),\n",
     "                            uber=uber_rides.rename(columns={'centroid':'geometry'}) \\\n",
     "                                .assign(id = uber_rides['tract'].astype(str)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "line_panel = combine_panels(bus=bus_rides.drop(columns=['geometry']) \\\n",
+    "                                 .rename(columns={'centroid':'geometry', 'route':'id'}),\n",
+    "                            train=train_line_rides.rename(columns={'centroid':'geometry', 'line':'id'}))"
    ]
   },
   {
@@ -648,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -672,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -688,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -702,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -721,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -733,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -752,11 +802,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "point_panel.to_parquet(point_panel_out, index=False)\n",
+    "line_panel.to_parquet(line_panel_out, index=False)\n",
     "tract_panel.to_parquet(tract_panel_out, index=False)"
    ]
   }
