refactor modeling data transforms into pipeline

--- a/notebooks/exploratory/gut-check.ipynb
+++ b/notebooks/exploratory/gut-check.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,11 @@
     "import plotly.express as px\n",
     "\n",
     "from data.constants import DATA_FOLDER, DNC_START\n",
-    "from data.datemath import to_ymd, from_ymd"
+    "from data.datemath import to_ymd, from_ymd\n",
+    "from datetime import datetime as dt\n",
+    "from functools import partial\n",
+    "from statsmodels.tsa.ar_model import AutoReg\n",
+    "from power import power_uncond, power_reg  # XXX: I think i broke this when i changed delta -> effect size"
    ]
   },
   {
@@ -51,19 +55,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "DNC_ATTEND = 5e4"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "DNC_ATTEND = 5e4\n",
     "daily_delta = 2 * DNC_ATTEND  # roundtrips per day * attendees\n",
     "weekly_delta = (4 + 2) * daily_delta  # (days in event + travel days) * roudtrips per day * attendees\n",
     "cum_delta = {\"yearly\": weekly_delta, \"monthly\": weekly_delta, \"weekly\": weekly_delta, \"daily\": daily_delta}"
@@ -11540,12 +11536,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from power import power_uncond\n",
-    "power_stats = power_uncond(total_rides_ts, ['freq','transit'], 'rides', weekly_delta)"
+    "power_stats = power_uncond(total_rides_ts, ['freq','transit'], 'rides', weekly_delta / len(total_rides_ts))"
    ]
   },
   {
@@ -38728,20 +38723,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from datetime import datetime as dt\n",
-    "from functools import partial\n",
-    "from statsmodels.tsa.ar_model import AutoReg\n",
-    "from power import power_reg\n",
-    "\n",
     "def compute_ar_power(model_data, model_groups, endog, exog=None, lags=1):\n",
     "    model_power = {}\n",
     "    for g,gd in model_data.groupby(model_groups):\n",
     "        group_exog = []\n",
-    "        delta = cum_delta[g[0]]\n",
+    "        delta = cum_delta[g[0]] / len(gd)\n",
     "        if g[0] == \"monthly\":\n",
     "            dates = pd.to_datetime(gd['date']+'-01')\n",
     "        elif g[0] == \"weekly\":\n",
@@ -40972,14 +40962,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "poi_delta = plot_data.groupby(['transit','freq'])['id'].nunique().rename('n') \\\n",
     "                    .reset_index() \\\n",
-    "                    .assign(cum_delta = lambda x: x['freq'].map(cum_delta),\n",
-    "                            poi_delta = lambda x: x['cum_delta'] / x['n']) \\\n",
+    "                    .assign(poi_delta = lambda x: x['freq'].map(cum_delta) / len(x)) \\\n",
     "                    .set_index(['transit','freq'])['poi_delta']"
    ]
   },
@@ -151820,11 +151809,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "power_stats = power_uncond(this_plot_data, ['freq','transit','id'], 'rides', this_plot_data.groupby(['freq','transit','id'])['poi_delta'].mean())"
+    "power_stats = power_uncond(this_plot_data, \n",
+    "                           ['freq','transit','id'], \n",
+    "                           'rides', \n",
+    "                           this_plot_data.groupby(['freq','transit','id'])['poi_delta'].sum())"
    ]
   },
   {
