--- a/pipeline/7-merge-transits.ipynb
+++ b/pipeline/7-merge-transits.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,9 +33,9 @@
     "bike_rides_in = os.path.join(DATA_FOLDER, \"interim\", \"bike_rides.geoparquet\")\n",
     "uber_rides_in = os.path.join(DATA_FOLDER, \"interim\", \"uber_rides.parquet\")\n",
     "\n",
-    "point_panel_out = os.path.join(DATA_FOLDER, \"final\", \"point_panel.parquet\")\n",
-    "line_panel_out = os.path.join(DATA_FOLDER, \"final\", \"line_panel.parquet\")\n",
-    "tract_panel_out = os.path.join(DATA_FOLDER, \"final\", \"tract_panel.parquet\")"
+    "point_panel_out = os.path.join(DATA_FOLDER, \"interim\", \"point_panel.parquet\")\n",
+    "line_panel_out = os.path.join(DATA_FOLDER, \"interim\", \"line_panel.parquet\")\n",
+    "tract_panel_out = os.path.join(DATA_FOLDER, \"interim\", \"tract_panel.parquet\")"
    ]
   },
   {
