fix bug in bus stops primary key

--- a/pipeline/1-get-cta-stations.ipynb
+++ b/pipeline/1-get-cta-stations.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,11 +113,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "bus_stops = gpd.read_file(BUS_STOPS_TABLE, columns=['ROUTESSTPG', 'geometry','PUBLIC_NAM'])"
+    "bus_stops = gpd.read_file(BUS_STOPS_TABLE, columns=['STREET','CROSS_ST','CITY','PUBLIC_NAM','ROUTESSTPG','geometry'])\n",
+    "bus_stops = bus_stops.rename(columns={'PUBLIC_NAM':'PUBLIC_NAME'})\n",
+    "# STREET CROSS_ST CITY is the composite non-unique PK for this table\n",
+    "#   - it is not unique due to large multi-bay transit centers that are conceptually co-located\n",
+    "# PUBLIC_NAM is human-readable but it is ambiguous concerning:\n",
+    "#   - repeated street names in chicago vs evanston\n",
+    "#   - repeated street/transit intersections across chicago e.g. Western"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dropping 4 rows\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Drop bus stops without route labels. Won't be able to get ridership for these.\n",
+    "print(\"Dropping {} rows\".format(bus_stops['ROUTESSTPG'].isna().sum()))\n",
+    "bus_stops = bus_stops.dropna(subset='ROUTESSTPG')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Imputing 1 rows\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Impute city for unknown cities\n",
+    "print(\"Imputing {} rows\".format(bus_stops['CITY'].isna().sum()))\n",
+    "bus_stops['CITY'] = bus_stops['CITY'].fillna('UNKNOWN')"
    ]
   },
   {
@@ -164,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
