--- a/pipeline/4-get-poi.ipynb
+++ b/pipeline/4-get-poi.ipynb
@@ -37,13 +37,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_file_in = os.path.join(DATA_FOLDER, \"raw\", \"train_stations.geojson\")\n",
-    "bus_routes_file_in = os.path.join(DATA_FOLDER, \"raw\", \"bus_routes.geojson\")\n",
-    "bus_stops_file_in = os.path.join(DATA_FOLDER, \"raw\", \"bus_stops.geojson\")\n",
     "poi_file_out = os.path.join(DATA_FOLDER, \"raw\", \"poi_buildings.geojson\")"
    ]
   },
@@ -55,14 +52,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "train_stations = gpd.read_file(train_file_in)\n",
-    "bus_routes = gpd.read_file(bus_routes_file_in)\n",
-    "bus_stops = gpd.read_file(bus_stops_file_in)"
+    "(None)"
    ]
   },
   {
