--- a/pipeline/6-code-features.ipynb
+++ b/pipeline/6-code-features.ipynb
@@ -127,13 +127,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Note: We only check for Midway because CTA busses don't go directly into O'Hare,\n",
     "#       nor even to the adjacent Mixed Modal Transit center.\n",
-    "bus_stops['airport'] = (bus_stops['PUBLIC_NAM'] == \"Midway Orange Line Station\").astype(float)"
+    "bus_stops['airport'] = (bus_stops['PUBLIC_NAME'] == \"Midway Orange Line Station\").astype(float)"
    ]
   },
   {
