drop bike stations with null geoms

--- a/pipeline/2-get-divvy-stations.ipynb
+++ b/pipeline/2-get-divvy-stations.ipynb
@@ -2,12 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import pandas as pd\n",
+    "import geopandas as gpd\n",
+    "import numpy as np\n",
     "\n",
     "from data.constants import WORLD_CRS, DATA_FOLDER\n",
     "from data.divvy import DivvyClient\n",
@@ -16,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,14 +52,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "17it [00:20,  1.23s/it]\n"
+      "DEBUG: populating bucket paths.\n"
      ]
     }
    ],
@@ -67,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,14 +81,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dropping 1 null geoms\n"
+     ]
+    }
+   ],
    "source": [
     "bike_stations = [project_gdf(x, WORLD_CRS) for x in bike_stations]\n",
     "# Now we can combine.\n",
     "# note: station_id are floats on all normalized tables!\n",
     "bike_stations = pd.concat(bike_stations, ignore_index=True).drop_duplicates()\n",
+    "null_geoms = (np.isnan(bike_stations[['longitude','latitude']]).any(axis=1) | \n",
+    "              np.isinf(bike_stations[['longitude','latitude']]).any(axis=1) |\n",
+    "              np.isnan(bike_stations['geometry'].x) | \n",
+    "              np.isinf(bike_stations['geometry'].x) | \n",
+    "              np.isnan(bike_stations['geometry'].y) | \n",
+    "              np.isinf(bike_stations['geometry'].y))\n",
+    "print(\"Dropping {} null geoms\".format(null_geoms.sum()))\n",
+    "bike_stations = bike_stations[~null_geoms]\n",
     "bike_stations = bike_stations.drop(columns=['latitude', 'longitude'])"
    ]
   },
@@ -99,18 +117,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/eric/Dev/DNCTransit/.venv/lib/python3.12/site-packages/pyogrio/raw.py:723: RuntimeWarning: Infinite or NaN coordinate encountered\n",
-      "  ogr_write(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "bike_stations.to_file(bike_stations_file, index=False)"
    ]
