bugfix inconsistent dtypes and s3 robustness

--- a/pipeline/1.1-profile-data.ipynb
+++ b/pipeline/1.1-profile-data.ipynb
@@ -7,13 +7,11 @@
    "outputs": [],
    "source": [
     "import geopandas as gpd\n",
-    "import pandas as pd\n",
     "import os\n",
     "import contextily as cx\n",
-    "from shapely.geometry import MultiPoint\n",
     "\n",
-    "from data.geo import foot_to_mi\n",
-    "from data.constants import (DATA_FOLDER, LOCAL_CRS, WEB_CRS)"
+    "from data.geo import label_point_dispersion\n",
+    "from data.constants import (DATA_FOLDER, WEB_CRS)"
    ]
   },
   {
@@ -121,21 +119,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def label_point_dispersion(df, pk):\n",
-    "    # nb: have to break into two steps to bypass sending ints to geoseries constructor\n",
-    "    df['diam_ft'] = df.groupby(pk)['geometry'].transform(\n",
-    "            lambda x: MultiPoint(x.to_crs(LOCAL_CRS).unique())\n",
-    "        ).apply(lambda x: x.minimum_rotated_rectangle.length)\n",
-    "    df['diam_mi'] = df['diam_ft'].pipe(foot_to_mi)\n",
-    "    return df"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -154,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -233,6 +216,27 @@
     "train_stations = train_stations.pipe(label_point_dispersion, 'map_id')\n",
     "assert all(train_stations['diam_mi'] < .25), \"Primary key approx accurate to .25mi\""
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TL/DR"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- map_id is the PK of train stations\n",
+    "- route is the PK of bus routes\n",
+    "- STREET, CROSS_ST, CITY is the composite PK of bus stations\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
