--- a/pipeline/5-get-ridership.ipynb
+++ b/pipeline/5-get-ridership.ipynb
@@ -16,7 +16,7 @@
     "from data.cta import CTAClient\n",
     "from data.divvy import DivvyClient\n",
     "from data.uber import UberClient\n",
-    "from data.datemath import iso_to_ymd, is_iso"
+    "from data.datemath import iso_to_ymd, is_iso, to_ymd"
    ]
   },
   {
@@ -159,8 +159,8 @@
     "    \"\"\"\n",
     "    Get counts by station and date.\n",
     "    \"\"\"\n",
-    "    trips['start_date'] = trips['start_time'].dt.date\n",
-    "    trips['end_date'] = trips['end_time'].dt.date\n",
+    "    trips['start_date'] = trips['start_time'].dt.date.apply(to_ymd)\n",
+    "    trips['end_date'] = trips['end_time'].dt.date.apply(to_ymd)\n",
     "    id_cols = ['station_id','date','vintage'] \n",
     "    id_cols += ['geometry'] if any('geometry' in x for x in trips.columns) else []\n",
     "    start_rides = trips.rename(columns=lambda x: x.replace('start_','')) \\\n",
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -191,136 +191,25 @@
      "output_type": "stream",
      "text": [
       "DEBUG: populating bucket paths.\n",
-      "DEBUG: reading  s3://divvy-tripdata/202401-divvy-tripdata.zip\n"
+      "DEBUG: Skipping BadZipFile:  s3://divvy-tripdata/202410-divvy-tripdata.zip\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1it [00:26, 26.30s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DEBUG: reading  s3://divvy-tripdata/202402-divvy-tripdata.zip\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2it [00:29, 12.46s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DEBUG: reading  s3://divvy-tripdata/202403-divvy-tripdata.zip\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "3it [00:32,  8.54s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DEBUG: reading  s3://divvy-tripdata/202404-divvy-tripdata.zip\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "4it [00:38,  7.34s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DEBUG: reading  s3://divvy-tripdata/202405-divvy-tripdata.zip\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "5it [00:46,  7.58s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DEBUG: reading  s3://divvy-tripdata/202406-divvy-tripdata.zip\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "6it [00:56,  8.31s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DEBUG: reading  s3://divvy-tripdata/202407-divvy-tripdata.zip\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "7it [01:05,  8.72s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DEBUG: reading  s3://divvy-tripdata/202408-divvy-tripdata.zip\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "8it [01:14,  8.86s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DEBUG: reading  s3://divvy-tripdata/202409-divvy-tripdata.zip\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "9it [01:24,  9.42s/it]\n"
+      "9it [01:51, 12.44s/it]\n"
      ]
     }
    ],
    "source": [
+    "# Takes ~2m to run\n",
     "bike_rides = divvy_client.s3_bike_trips(dt.fromisoformat(data_start_iso).year, \n",
     "                                        dt.fromisoformat(data_end_iso).year)\n",
     "bike_rides = map(agg_ridership, bike_rides)\n",
     "bike_rides = pd.concat(list(tqdm(bike_rides)), ignore_index=True)\n",
-    "bike_rides = bike_rides.loc[(bike_rides['date'] >= dt.fromisoformat(data_start_iso).date()) \\\n",
-    "                            & (bike_rides['date'] <= dt.fromisoformat(data_end_iso).date())]"
+    "bike_rides = bike_rides.loc[(bike_rides['date'] >= iso_to_ymd(data_start_iso)) & \\\n",
+    "                            (bike_rides['date'] <= iso_to_ymd(data_end_iso))]"
    ]
   },
   {
